設定画面と アプリ（プロセス）終了機能作成

--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,14 @@
 		    <artifactId>spring-boot-starter-test</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		<!-- アクチュエーター -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
 
-				<!-- エクセル操作 -->
+
+		<!-- エクセル操作 -->
 		<dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
